syntax="proto3";

option java_multiple_files=true;
option java_package= "com.sdj3.dataServerSDJ3.protobuf.TrayProtobuf";

message CreateTrayMessage{

  string  name = 1;
  double maxWeight = 2;
}
message ReturnMessage{
  string message = 1;
}
message ReturnTrayMessage{
  int32 id =1;
  string  name = 2;
  double maxWeight = 3;
}

service TrayService{
  rpc createTray(CreateTrayMessage) returns(ReturnMessage);

}